[package]
name = "type-diagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdb = "0.8.0"

#[dependencies.windows]
#version = "0.53.0"
#features = [
#    "Win32_System_Com"
#]
#
#[dependencies.microsoft-dia]
#version = "0.10.0"